--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
     <!-- ----------------------Nav-Bar-End-------------------------------- -->
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <div class="visit">
-        <span class="headings">VISIT OUR STORE</span>
+        <span class="headings">VISIT OUR STORE</span><br>
+        <span class="color">__________</span>
         <!-- slider -->
         <div class="visit-images-containere">
             <div id="carouselExample" class="carousel slide margin-left">
@@ -143,7 +144,9 @@
     </div>
     <!-- slider end -->
     <div class="Seller-container">
-        <span class="headings ">Our Best Seller</span>
+    <span class="headings ">Our Best Seller</span>
+    <span class="color1">__________</span>
+
         <center>
             <!-- <div class="seller-heading"> -->
             <span onclick="newArrival()" id="newArrival">NEW ARRIVALS</span>
