--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
     </div>
     <!-- slider end -->
     <div class="Seller-container">
-    <span class="headings ">Our Best Seller</span>
-    <span class="color1">__________</span>
+        <span class="headings ">Our Best Seller</span>
+        <span class="color1">__________</span>
 
         <center>
             <!-- <div class="seller-heading"> -->
@@ -165,7 +165,7 @@
                         <img src="./icons/menupage-icons/search.png" class="hover-image" title="search" alt="">
                         <img src="./icons/menupage-icons/wishlist.png" class="hover-image" title="white-list">
                     </div>
-                    <div  class="flavour-description">
+                    <div class="flavour-description">
                         <p id="productText1">Cereal And Milk</p>
                         <p id="price1" class="flavour-price">₹ 200.00 </p>
                     </div>
@@ -181,7 +181,7 @@
                         <img src="./icons/menupage-icons/wishlist.png" class="hover-image" title="white-list">
                     </div>
                     <div class="flavour-description">
-                       <p id="productText2" > Choco Cherry</p>
+                        <p id="productText2"> Choco Cherry</p>
                         <p id="price2" class="flavour-price">₹ 360.00 </p>
                     </div>
                 </div>
@@ -195,8 +195,8 @@
                         <img src="./icons/menupage-icons/search.png" class="hover-image" title="search ">
                         <img src="./icons/menupage-icons/wishlist.png" class="hover-image" title="wishlist">
                     </div>
-                    <div  class="flavour-description">
-                       <p id="productText3"> Chokobar</p>
+                    <div class="flavour-description">
+                        <p id="productText3"> Chokobar</p>
                         <p id="price3" class="flavour-price">₹ 150.00 </p>
                     </div>
                 </div>
@@ -210,7 +210,7 @@
                         <img src="./icons/menupage-icons/search.png" class="hover-image" title="search ">
                         <img src="./icons/menupage-icons/wishlist.png" class="hover-image" title="wishlist">
                     </div>
-                    <div  class="flavour-description">
+                    <div class="flavour-description">
                         <p id="productText4">chocolate Wafer</p>
                         <p id="price4" class="flavour-price">₹ 320.00 </p>
                     </div>
@@ -226,7 +226,7 @@
                         <img src="./icons/menupage-icons/search.png" class="hover-image" title="search ">
                         <img src="./icons/menupage-icons/wishlist.png" class="hover-image" title="wishlist">
                     </div>
-                    <div  class="flavour-description">
+                    <div class="flavour-description">
                         <p id="productText5">Cookie</p>
                         <p id="price5" class="flavour-price">₹ 480.00 </p>
                     </div>
@@ -241,7 +241,7 @@
                         <img src="./icons/menupage-icons/search.png" class="hover-image" title="search ">
                         <img src="./icons/menupage-icons/wishlist.png" class="hover-image" title="wishlist">
                     </div>
-                    <div  class="flavour-description">
+                    <div class="flavour-description">
                         <p id="productText6">Cookies Cream</p>
                         <p id="price6" class="flavour-price">₹ 260.00 </p>
                     </div>
@@ -256,8 +256,8 @@
                         <img src="./icons/menupage-icons/search.png" class="hover-image" title="search ">
                         <img src="./icons/menupage-icons/wishlist.png" class="hover-image" title="wishlist">
                     </div>
-                    <div  class="flavour-description">
-                       <p id="productText7">Cookies Dough</p>
+                    <div class="flavour-description">
+                        <p id="productText7">Cookies Dough</p>
                         <p id="price7" class="flavour-price">₹ 260.00 </p>
                     </div>
                 </div>
@@ -271,8 +271,8 @@
                         <img src="./icons/magnifying-glass.png" class="hover-image" title="search ">
                         <img src="./icons/heart.png" class="hover-image" title="wishlist">
                     </div>
-                    <div  class="flavour-description">
-                        <p id="productText8" >Creamy Cake</p>
+                    <div class="flavour-description">
+                        <p id="productText8">Creamy Cake</p>
                         <p id="price8" class="flavour-price">₹ 260.00 </p>
                     </div>
                 </div>
@@ -353,11 +353,12 @@
 
     <div class="trending mt-4">
         <h3 class="trend-label"> HOT DEALS</h3>
+        <span class="color1">_________</span>
         <div class="row ">
 
             <div class="flavour-card col col-md-2 col-lg-3">
                 <div>
-                    <img src="./imgs/menu-card/Creamy-Cake.jpg" class="flavour-img img-fluid" alt="">
+                    <img src="./imgs/home/1.jpg" class="flavour-img img-fluid" alt="">
                 </div>
                 <div class="effect-hover">
                     <img src="./icons/menupage-icons/shopping-bag.png" height="20px">
@@ -365,15 +366,15 @@
                     <img src="./icons/menupage-icons/wishlist.png" height="20px" alt="">
                 </div>
                 <div class="flavour-description">
-                    Creamy Cake
+                    Cereal And Milk
                     <br>
-                    <p class="flavour-price">₹ 260.00 </p>
+                    <p class="flavour-price">₹ 200.00 </p>
                 </div>
             </div>
 
             <div class="flavour-card col col-md-2 col-lg-3">
                 <div>
-                    <img src="./imgs/menu-card/Creamy-Cake.jpg" class="flavour-img img-fluid" alt="">
+                    <img src="./imgs/home/3.jpg" class="flavour-img img-fluid" alt="">
                 </div>
                 <div class="effect-hover">
                     <img src="./icons/menupage-icons/shopping-bag.png" height="20px">
@@ -381,33 +382,16 @@
                     <img src="./icons/menupage-icons/wishlist.png" height="20px" alt="">
                 </div>
                 <div class="flavour-description">
-                    Creamy Cake
+                    Chokobar
                     <br>
-                    <p class="flavour-price">₹ 260.00 </p>
-                </div>
-            </div>
-
-
-            <div class="flavour-card col col-md-2 col-lg-3">
-                <div>
-                    <img src="./imgs/menu-card/Creamy-Cake.jpg" class="flavour-img img-fluid" alt="">
-                </div>
-                <div class="effect-hover">
-                    <img src="./icons/menupage-icons/shopping-bag.png" height="20px">
-                    <img src="./icons/menupage-icons/search.png" height="20px" alt="">
-                    <img src="./icons/menupage-icons/wishlist.png" height="20px" alt="">
-                </div>
-                <div class="flavour-description">
-                    Creamy Cake
-                    <br>
-                    <p class="flavour-price">₹ 260.00 </p>
+                    <p class="flavour-price">₹ 150.00 </p>
                 </div>
             </div>
 
 
             <div class="flavour-card col col-md-2 col-lg-3">
                 <div>
-                    <img src="./imgs/menu-card/Creamy-Cake.jpg" class="flavour-img img-fluid" alt="">
+                    <img src="./imgs/home/5.jpg" class="flavour-img img-fluid" alt="">
                 </div>
                 <div class="effect-hover">
                     <img src="./icons/menupage-icons/shopping-bag.png" height="20px">
@@ -415,13 +399,31 @@
                     <img src="./icons/menupage-icons/wishlist.png" height="20px" alt="">
                 </div>
                 <div class="flavour-description">
-                    Creamy Cake
+                    Cookie
+                    <br>
+                    <p class="flavour-price">₹ 480.00 </p>
+                </div>
+            </div>
+
+
+            <div class="flavour-card col col-md-2 col-lg-3">
+                <div>
+                    <img src="./imgs/home/6.jpg" class="flavour-img img-fluid" alt="">
+                </div>
+                <div class="effect-hover">
+                    <img src="./icons/menupage-icons/shopping-bag.png" height="20px">
+                    <img src="./icons/menupage-icons/search.png" height="20px" alt="">
+                    <img src="./icons/menupage-icons/wishlist.png" height="20px" alt="">
+                </div>
+                <div class="flavour-description">
+                    Cookies Cream
                     <br>
                     <p class="flavour-price">₹ 260.00 </p>
                 </div>
             </div>
 
         </div>
+        <br><br>
         <button class="product-btn">ALL PRODUCTS</button>
     </div>
     <div class="menu">
@@ -433,7 +435,7 @@
         <div class="flex menu-product">
             <div class=" menu-card-icons">
                 <div class="card-img">
-                    <img src="./icons/cone.png" width="150px" class="img-fluid" alt="">
+                    <img src="./icons/cone.png" width="120px" class="img-fluid" alt="">
                 </div>
                 <div>
                     <h2>Ice Cream Cone</h2>
@@ -441,7 +443,7 @@
             </div>
             <div class=" menu-card-icons">
                 <div class="card-img">
-                    <img src="./icons/stick-ice.png" width="150px" class="img-fluid" alt="">
+                    <img src="./icons/stick-ice.png" width="120px" class="img-fluid" alt="">
                 </div>
                 <div>
                     <h2>Ice Cream Stick</h2>
@@ -449,7 +451,7 @@
             </div>
             <div class=" menu-card-icons">
                 <div class="card-img">
-                    <img src="./icons/cup.png" width="150px" class="img-fluid" alt="">
+                    <img src="./icons/cup.png" width="120px" class="img-fluid" alt="">
                 </div>
                 <div>
                     <h2>Ice Cream Cup</h2>
@@ -457,7 +459,7 @@
             </div>
             <div class=" menu-card-icons">
                 <div class="card-img">
-                    <img src="./icons/box.png" width="150px" class="img-fluid" alt="">
+                    <img src="./icons/box.png" width="120px" class="img-fluid" alt="">
                 </div>
                 <div>
                     <h2>Box Ice Cream</h2>
@@ -465,21 +467,26 @@
             </div>
         </div>
     </div>
-    <div class="flex">
-        <div>
-            <img src="./imgs/home/instagram2.webp" height="100px" alt="">
-        </div>
-        <div>
-            <img src="./imgs/home/instagram3.webp" height="100px" alt="">
-        </div>
-        <div>
-            <img src="./imgs/home/instagram4.webp" height="100px" alt="">
-        </div>
-        <div>
-            <img src="./imgs/home/instagram5.webp" height="100px" alt="">
-        </div>
-        <div>
-            <img src="./imgs/home/instagram6.webp" height="100px" alt="">
+    <div class="insta-container">
+        <h3>Follow Us On Instagram!</h3>
+        @foreach ($posts as $post)
+            <div class="single-image-container"></div>
+        <div class="flex">
+            <div class="insta-img-div">
+                <img src="./imgs/home/instagram2.webp" height="300px" class="insta-image" alt="">
+            </div>
+            <div class="insta-img-div">
+                <img src="./imgs/home/instagram3.webp" height="300px" class="insta-image" alt="">
+            </div>
+            <div class="insta-img-div">
+                <img src="./imgs/home/instagram4.webp" height="300px" class="insta-image" alt="">
+            </div>
+            <div class="insta-img-div">
+                <img src="./imgs/home/instagram5.webp" height="300px" class="insta-image" alt="">
+            </div>
+            <div class="insta-img-div">
+                <img src="./imgs/home/instagram6.webp" height="300px" class="insta-image" alt="">
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
