add css and js on index

--- a/index.html
+++ b/index.html
@@ -469,11 +469,15 @@
     </div>
     <div class="insta-container">
         <h3>Follow Us On Instagram!</h3>
-        @foreach ($posts as $post)
-            <div class="single-image-container"></div>
-        <div class="flex">
+        @creamy_desert (ice-cream) <br>
+        <p class="color2">_________</p>
+        <div class="single-image-container"></div>
+        <div class="flex  image-content">
             <div class="insta-img-div">
                 <img src="./imgs/home/instagram2.webp" height="300px" class="insta-image" alt="">
+                <div class="middle-insta">
+                    <div class="insta-icon"><i class="fa-brands fa-instagram" style="height: 50px;"></i></div>
+                </div>
             </div>
             <div class="insta-img-div">
                 <img src="./imgs/home/instagram3.webp" height="300px" class="insta-image" alt="">
