--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/footer1.css">
     <script src="./JS/header.js"></script>
     <script src="./JS/index.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -493,6 +494,57 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="flex">
+            <div>
+                <img src="./imgs/logo1.png" alt="" id="footer-logo">
+                <h4 class="slogun">
+                    "Scoops of joy, frozen delight,<br>
+                    Taste the magic, day or night!"</h4>
+                <div class="footer mt-4">&nbsp;&nbsp;<a href="https://www.instagram.com/bhushan_potdar_19" onclick="return ready()" class="b"
+                        target="_blank"><i class="fa-brands fa-instagram fa-brand"></i></a>&emsp;<a
+                        href="https://www.linkedin.com/in/bhushan-potdar-62283a2a7/" onclick="return ready()" class="a" target="_blank"><i
+                            class="fa-brands fa-linkedin fa-brand"></i></a>&emsp;<a href="https://wa.me/7744049590" onclick="return ready()"
+                        class="b" target="_blank"><i class="fa-brands fa-whatsapp fa-brand"></i></a>
+                    &emsp;<a href="https://github.com/bhushanpotdar19" onclick="return ready()" class="b" target="_blank"><i
+                            class="fa-brands fa-github fa-brand"></i></a></div>
+                <br>
+
+
+
+            </div>
+            <div class="quick-links">
+                <UL type="none">
+                    <li>Quick Links</li>
+                    <hr>
+                    <li>
+                        <ul type="none">
+                            <li><a href="./index.html">Home</a></li>
+                            <li><a href="./Pages/about-us.html">About Us</a></li>
+                            <li><a href="./Pages/contact-page.html">Contact Us</a></li>
+                            <li><a href="./Pages/services.html">Services</a></li>
+                            <LI><a href="./Pages/menu-page.html">Menu Card</a></LI>
+                        </ul>
+                    </li>
+                </UL>
+            </div>
+            <div class="quick-links">
+                <UL type="none">
+                    <li>Help & Information</li>
+                    <hr>
+                    <li>
+                        <ul type="none">
+                            <li><a href="">Privacy Policy</a></li>
+                            <li><a href="">Terms & Conditions</a></li>
+                            <li><a href="">Product Return</a></li>
+                            <li><a href="">Wholesale Policy</a></li>
+                            <li><a href="">Help Center</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
