--- a/index.html
+++ b/index.html
@@ -495,19 +495,21 @@
         </div>
     </div>
     <footer>
-        <div class="flex">
+        <div class="flex footer-cont">
             <div>
                 <img src="./imgs/logo1.png" alt="" id="footer-logo">
                 <h4 class="slogun">
                     "Scoops of joy, frozen delight,<br>
                     Taste the magic, day or night!"</h4>
-                <div class="footer mt-4">&nbsp;&nbsp;<a href="https://www.instagram.com/bhushan_potdar_19" onclick="return ready()" class="b"
-                        target="_blank"><i class="fa-brands fa-instagram fa-brand"></i></a>&emsp;<a
-                        href="https://www.linkedin.com/in/bhushan-potdar-62283a2a7/" onclick="return ready()" class="a" target="_blank"><i
-                            class="fa-brands fa-linkedin fa-brand"></i></a>&emsp;<a href="https://wa.me/7744049590" onclick="return ready()"
-                        class="b" target="_blank"><i class="fa-brands fa-whatsapp fa-brand"></i></a>
-                    &emsp;<a href="https://github.com/bhushanpotdar19" onclick="return ready()" class="b" target="_blank"><i
-                            class="fa-brands fa-github fa-brand"></i></a></div>
+                <div class="footer mt-4">&nbsp;&nbsp;<a href="https://www.instagram.com/bhushan_potdar_19"
+                        onclick="return ready()" class="b" target="_blank"><i
+                            class="fa-brands fa-instagram fa-brand"></i></a>&emsp;<a
+                        href="https://www.linkedin.com/in/bhushan-potdar-62283a2a7/" onclick="return ready()" class="a"
+                        target="_blank"><i class="fa-brands fa-linkedin fa-brand"></i></a>&emsp;<a
+                        href="https://wa.me/7744049590" onclick="return ready()" class="b" target="_blank"><i
+                            class="fa-brands fa-whatsapp fa-brand"></i></a>
+                    &emsp;<a href="https://github.com/bhushanpotdar19" onclick="return ready()" class="b"
+                        target="_blank"><i class="fa-brands fa-github fa-brand"></i></a></div>
                 <br>
 
 
@@ -528,7 +530,7 @@
                     </li>
                 </UL>
             </div>
-            <div class="quick-links">
+            <div class="quick-links1">
                 <UL type="none">
                     <li>Help & Information</li>
                     <hr>
@@ -543,7 +545,24 @@
                     </li>
                 </ul>
             </div>
+            <div class="quick-links1">
+                <UL type="none">
+                    <li>Contact Us</li>
+                    <hr>
+                    <li>
+                        <ul type="none">
+                            <li class="slogun1">1/2, Rachik House, <br> Yeolekar, College Road, <br> Nashik, Maharashtra
+                            </li>
+                            <li><a href="">0253 230 5411</a></li>
+                            <li><a href="" target="mailto">creamydesert@gmail.com</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
+        <hr class="hr">
+        <p id="copyright" style="text-align:center;">Copyright @ Creamy Desert | All Rights Reserved.</p>
+        <img src="./icons/logoo-removebg-preview.png" class="visa-image" alt="">
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
