--- a/Pages/buy-now.html
+++ b/Pages/buy-now.html
@@ -12,49 +12,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary mt-2">
-    <div class="container-fluid mx-5">
-      <a class="navbar-brand ms-md-5 ms-md-0 fs-3 ha" href="#">Foodzie</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link ms-md-2 ms-md-0" aria-current="page" href="../index.html">Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle ms-md-2 ms-md-0" href="#" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              Menu
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="./maincourse.html">Maincourse</a></li>
-              <li><a class="dropdown-item" href="./Stater.html">Stater</a></li>
-              <li><a class="dropdown-item" href="./dessert.html">Dessert</a></li>
-          </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link ms-md-2 ms-md-0" href="./review.html">Review</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link ms-md-2 ms-md-0" href="#">About us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link ms-md-2 ms-md-0" href="./contact.html">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link ms-md-2 ms-md-0" href="./login.html">Login/Register</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link ms-md-2 ms-md-0 me-5 rounded active border bag text-center" href="./orderNow.html">Order
-              Now</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  
 
   <div class="mb-5">
     <div class="container">
@@ -125,7 +83,7 @@
         </div>
         <div class="mt-2 d-flex">
           <button type="button" class="px-5 py-2 rounded border bag" onclick="alert('Fill Information Properly ⚠')">Place Your Order</button>
-          <h5 class="mt-2 ms-4">Need help? <a href="./contactus.html">Contact us!</a></h5>
+          <h5 class="mt-2 ms-4">Need help? <a href="./../Pages/contact-page.html">Contact us!</a></h5>
         </div>
       </div>
     </div>
@@ -201,19 +159,25 @@
                 &nbsp; &nbsp; <a href="tel:+911212121212" class="footer-anchor"> +91-1212121212</a>
             </p>
 
+
             <p> <i class="fa-brands fa-facebook"></i> &nbsp;
                 &nbsp; Facebook </p>
+
 
             <p> <i class="fa-brands fa-twitter"></i> &nbsp;
                 &nbsp; Twitter</p>
 
+
             <p> <i class="fa-brands fa-instagram"></i> &nbsp;
                 &nbsp; Instagram</p>
+
 
             <p> <i class="fa-brands fa-linkedin"></i> &nbsp;
                 &nbsp; LinkedIn</p>
         </div>
     </div>
+
+
     <div class="footer-sec">
         <p class="footer-sec-title"> Contact us :</p>
         <div class="footer-data">
@@ -226,18 +190,23 @@
                 &nbsp; &nbsp; <a href="mailto:pratikshakatore08@gmail.com">pratikshakatore08@gmail.com</a>
             </p>
 
+
             <p> <i class="fa-solid fa-phone"></i>
                 &nbsp; &nbsp; <a href="tel:+91-0000000000"> +91-0000000000</a>
             </p>
         </div>
     </div>
 </div>
+
+
 <script src="https://kit.fontawesome.com/4d47a5db67.js" crossorigin="anonymous"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
     <script src="../js/orderNow.js"></script>
+
+
 </body>
 
 </html>
