--- a/Pages/buy-now.html
+++ b/Pages/buy-now.html
@@ -101,10 +101,12 @@
               <p class="card-text">Sweet and Frozen</p>
               <p><span class="me-5">50% OFF </span><span class="ms-5 ha"> &nbsp; Rs. 499/-</span></p>
               <div class="d-flex justify-content-around">
-                <a href="#" onclick="addItem('../images/card-1.jpeg','Bread slice Avocado','499'),alert('Your Order Add Successfully 🎊🎉')">Add to Card</a>
+                <a href="#" onclick="addItem('./../imgs/buy-mow-page-img/chocolate.png','Bread slice Avocado','499'),alert('Your Order Add Successfully 🎊🎉')">Add to Card</a>
               </div>
             </div>
           </div>
+
+          
           <div class="card my-4 mx-4 shadow img-card-1" style="width: 18rem;">
             <img src="./../imgs/buy-mow-page-img/Mangoo.png" height="60%" class="card-img-top " alt="...">
             <div class="card-body">
@@ -112,10 +114,12 @@
               <p class="card-text ">Chill with Cremy!</p>
               <p><span class="me-5">50% OFF </span><span class="ms-5 ha"> &nbsp; Rs. 699/-</span></p>
               <div class="d-flex justify-content-around">
-                <a href="#" onclick="addItem('../images/card-2.jpeg','Pasta With Parmesan','699'),alert('Your Order Add Successfully 🎊🎉')">Add to Card</a>
+                <a href="#" onclick="addItem('../../img/buy-mow-page-img/Mangoo.png','Delicious Mango-Ice-Cream','699'),alert('Your Order Add Successfully 🎊🎉')">Add to Card</a>
               </div>
             </div>
           </div>
+
+
           <div class="card my-4 mx-4 shadow img-card-1" style="width: 18rem;">
             <img src="./../imgs/buy-mow-page-img/strawberry.png" class="card-img-top " alt="...">
             <div class="card-body">
@@ -123,7 +127,7 @@
               <p class="card-text">Melting for it!</p>
               <p><span class="me-5">50% OFF </span><span class="ms-5 ha"> &nbsp; Rs. 229/-</span></p>
               <div class="d-flex justify-content-around">
-                <a href="#" onclick="addItem('../images/card-.3.jpg','Cheese Burger','229'),alert('Your Order Add Successfully 🎊🎉')">Add to Card</a>
+                <a href="#" onclick="addItem('./../imgs/buy-mow-page-img/strawberry.png','Cheese Burger','229'),alert('Your Order Add Successfully 🎊🎉')">Add to Card</a>
               </div>
             </div>
           </div>
