--- a/Pages/product-card.html
+++ b/Pages/product-card.html
@@ -10,6 +10,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="./../css/product-card.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <script src="https://kit.fontawesome.com/029a190c6b.js" crossorigin="anonymous"></script>
        
@@ -138,7 +139,7 @@
 
     <div class="row">
      <div  class="container col col-lg-4 col-md-2 col-sm-1 m-auto">
-        <img class="icecream" src="./../imgs/product-card/Wafer-Ice-Cream.jpg" height="200" alt="bottle"/>
+        <img class="icecream img-fluid " src="./../imgs/product-card/Wafer-Ice-Cream.jpg" height="200" alt="bottle"/>
          <div class="description">
            <h2>Wafer Ice-Cream
 
@@ -156,7 +157,7 @@
 
 <!-- Card making-->
      <div class="container col col-lg-4 col-md-2 col-sm-1 m-auto">
-        <img class="icecream chocobar" src="./../imgs/product-card/Chokobar.jpg" height="200" alt="bottle"/>
+        <img class="icecream chocobar img-fluid" src="./../imgs/product-card/Chokobar.jpg" height="200" alt="bottle"/>
          <div class="description">
            <h2>Chocobar
 
@@ -174,7 +175,7 @@
 
 <!-- Card making-->
      <div  class="container col col-lg-4 col-md-2 col-sm-1 m-auto">
-        <img class="icecream" src="./../imgs/product-card/Creamy-Cake.jpg" height="200" alt="bottle"/>
+        <img class="icecream img-fluid" src="./../imgs/product-card/Creamy-Cake.jpg" height="200" alt="bottle"/>
          <div class="description">
            <h2>Creamy Cake
 
@@ -192,7 +193,7 @@
 
 <!-- Card making-->
      <div class="container col col-lg-4 col-md-2 col-sm-1 m-auto">
-        <img class="icecream1" src="./../imgs/product-card/fashion-cat.webp" height="200" alt="bottle"/>
+        <img class="icecream1 img-fluid" src="./../imgs/product-card/fashion-cat.png" height="200" alt="bottle"/>
          <div class="description">
            <h2>Fashion cat
 
@@ -231,6 +232,12 @@ No products are available.
    </div>
 </div>
 <!--product section ends-->
+    <div class="flex">
+        <div class="zoom-img">
+            <img src="./../imgs/home/instagram2.webp" height="300px" class="insta-image" alt="">
+        </div>
+    </div>
+
    
 <script>
    
