--- a/Pages/review-page.html
+++ b/Pages/review-page.html
@@ -7,14 +7,83 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="./../css/review-page.css">
+  <link rel="stylesheet" href="./../css/header.css">
+  <script src="./../JS/header.js"></script>
 </head>
 
 <body>
+  
+  <div class="nav-container flex" id="nav">
+    <div class="right-flex flex">
+        <img src="./../imgs/menu.png" height="40px" class="hamburger" onclick="openNavs()" alt="">
+        <a href="./../index.html"> <img src="./../imgs/logo.png" class="logo" alt=""></a>
+    </div>
+    <div class="mid-flex">
+        <ul class="menu-list flex" type="none">
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./../Pages/about-us.html">About Us</a></li>
+            <li><a href="./../Pages/contact-page.html">Contact Us</a></li>
+            <li><a href="./../Pages/services.html">Services</a></li>
+        </ul>
+    </div>
+    <div class="left-flex">
+        <img src="./../icons/magnifying-glass.png" class="nav-icons" alt="" onclick="openSearch()">
+        <a href="./../Pages/login-page.html"><img src="./../icons/add-contact.png" class="nav-icons login-icon"
+                alt=""></a>
+        <img src="./../icons/heart.png" class="nav-icons  heart-icon" alt="">
+        <a href="./../Pages/add-to-cart.html"><img src="./../icons/shopping-bag.png" class="nav-icons" alt=""
+                onclick="openCarts()"></a>
+    </div>
+</div>
+<!--<header>
+
+    <div id="myOverlay" class="overlay">
+        <span class="closebtn" onclick="closeSearch()" title="Close Search">x</span><br><br><br>
+        <h1 class="search-title">Search Your Favorite Ice-Cream </h1>
+        <h2 class="search-title">And Hit Enter...</h2>
+        <div class="overlay-content">
+            <form>
+                <input type="text" placeholder="Search Your Favorite Ice-Cream Here..." name="search">
+            </form>
+        </div>
+    </div>
+    <div id="mySidenav1" class="sidenav1">
+        <a href="javascript:void(0)" class="closebtn1" onclick="closeNavs()">&times;</a>
+        <p class="cart1">Shopping Cart</p>
+        <hr>
+    </div>
+
+    <div class="bg-img" id="bg-img">
+        <div class="text-overlay">
+            <span class="heading">Style Destination</span>
+            <h1>Taste From The </h1>
+            <h1>Good Old Days.</h1>
+            <button class="buyNow-btn1">SHOP NOW</button>
+        </div>
+
+    </div>
+    <div class="slide-btn-comtain" onclick="changeBg()">
+        <img src="./icons/new-moon.png" alt="" class="slide-btn" id="slide-btn"
+            onclick="changeSlideBtn('./imgs/s5.jpg')">
+        <img src="./icons/oval.png" alt="" class="slide-btn btn-2" id="slide-btn1"
+            onclick="changeSlideBtn('./imgs/s6.jpg')">
+    </div>
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Clients</a>
+        <a href="#">Contact</a>
+    </div>
+
+
+</header> --> 
+<!-- ----------------------Nav-Bar-End-------------------------------- -->
   <div class="mt-3 pb-5">
     <div class="container">
       <div class="row">
         <div class="my-md-5 my-sm-0 d-flex flex-wrap flex-wrap justify-content-around">
-          <img src="../images/review.png" class="col-md-6">
+          <img src="./../imgs/review.png" class="col-md-6">
           <div class="card col-md-5 col-xs-12 shadow p-md-4 px-5 w-xs-100 w-md-auto">
             <h4 class="my-3">WRITE A REVIEW</h4>
             <p class="mb-2">Name : </p>
@@ -86,7 +155,7 @@ function loadList() {
         let msg = reviewListMsg[i];
         reviewBox.innerHTML = reviewBox.innerHTML + `<div class="card p-3 col-md-3 col-xs-12 col-sm-4 shadow m-4">
         <h4 class="text-center mt-3">${name}</h4>
-        <img src="../images/review-img.png" class="wdt bag p-2 d-block m-auto rounded-circle my-3">
+        <img src="../imgs/review-img.png" class="wdt bag p-2 d-block m-auto rounded-circle my-3">
         <p class="mt-1 m-2 text-center">${msg}</p>
         <p role="button" class="link-danger mt-4 mb-0 text-center" onclick="removeReview(${i})">Remove</p>
     </div>`;
