created-pro-css

--- a/Pages/buy-now.html
+++ b/Pages/buy-now.html
@@ -8,17 +8,17 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="./../css/buy-now.css">
-  <link rel="stylesheet" href="./../css/footer.css">
+  <link rel="stylesheet" href="./../css/footer1.css">
 </head>
 
 <body>
-  
+
 
   <div class="mb-5">
     <div class="container">
       <div class="row d-flex my-5 ms-md-5">
         <div class="col-md-7 col-xs-12 bg-white border m-2 p-5 shadow">
-          <h3>Shipping Information</h3>
+          <h3 class="identity">Shipping Information</h3>
           <p class="my-2 mt-5">Full Name :</p>
           <input type="text" placeholder="Your first and last name" required
             class="w-100 p-2 px-3 rounded border border-black">
@@ -62,7 +62,7 @@
           </div>
         </div>
         <div class="col-md-7 col-xs-12 bg-white border m-2 p-5 shadow">
-          <h3>Payment Information</h3>
+          <h3 class="identity-2">Payment Information</h3>
           <p class="my-2 mt-5">Credit Card Number :</p>
           <input type="text" placeholder="**** **** **** ****" required
             class="w-100 p-2 px-3 rounded border border-black">
@@ -106,7 +106,7 @@
             </div>
           </div>
 
-          
+
           <div class="card my-4 mx-4 shadow img-card-1" style="width: 18rem;">
             <img src="./../imgs/buy-mow-page-img/Mangoo.png" height="60%" class="card-img-top " alt="...">
             <div class="card-body">
@@ -138,79 +138,80 @@
 
 
 
-  <div class="shop-footer">
-    <div class="footer-sec">
-        <p class="footer-sec-title"> Quick Links </p>
-        <div class="footer-data">
-          <p><a href="../index.html">Home </a></p>
-          <p><a href="#">About us</a></p>
-          <p><a href="./contact.html">Contact us</a>
-          </p>
-
-          <p><a href="./login.html"> Login </a>
-          <p><a href="./orderNow.html"> Order Now</a>
-      </div>
-    </div>
-    <div class="footer-sec">
-        <p class="footer-sec-title"> Social :</p>
-        <div class="footer-data">
-            <p> <i class="fa-solid fa-envelope"></i>
-              &nbsp; &nbsp; <a href="mailto:pratikshakatore08@gmail.com">pratikshakatore08@gmail.com</a>
-            </p>
+  <footer>
+    <div class="flex footer-cont">
+        <div>
+            <img src="./../imgs/logo.png" alt="" id="footer-logo">
+            <h4 class="slogun">
+                "Scoops of joy, frozen delight,<br>
+                Taste the magic, day or night!"</h4>
+            <div class="footer mt-4">&nbsp;&nbsp;<a href="https://www.instagram.com/bhushan_potdar_19"
+                    onclick="return ready()" class="b" target="_blank"><i
+                        class="fa-brands fa-instagram fa-brand"></i></a>&emsp;<a
+                    href="https://www.linkedin.com/in/bhushan-potdar-62283a2a7/" onclick="return ready()" class="a"
+                    target="_blank"><i class="fa-brands fa-linkedin fa-brand"></i></a>&emsp;<a
+                    href="https://wa.me/7744049590" onclick="return ready()" class="b" target="_blank"><i
+                        class="fa-brands fa-whatsapp fa-brand"></i></a>
+                &emsp;<a href="https://github.com/bhushanpotdar19" onclick="return ready()" class="b"
+                    target="_blank"><i class="fa-brands fa-github fa-brand"></i></a></div>
+            <br>
 
 
-            <p> <i class="fa-solid fa-phone"></i>
-                &nbsp; &nbsp; <a href="tel:+911212121212" class="footer-anchor"> +91-1212121212</a>
-            </p>
 
-
-            <p> <i class="fa-brands fa-facebook"></i> &nbsp;
-                &nbsp; Facebook </p>
-
-
-            <p> <i class="fa-brands fa-twitter"></i> &nbsp;
-                &nbsp; Twitter</p>
-
-
-            <p> <i class="fa-brands fa-instagram"></i> &nbsp;
-                &nbsp; Instagram</p>
-
-
-            <p> <i class="fa-brands fa-linkedin"></i> &nbsp;
-                &nbsp; LinkedIn</p>
         </div>
-    </div>
-
-
-    <div class="footer-sec">
-        <p class="footer-sec-title"> Contact us :</p>
-        <div class="footer-data">
-
-            <p><i class="fa-solid fa-location-dot"></i>
-                &nbsp; &nbsp; <a href="https://maps.app.goo.gl/N3ngnED1vBDYVvj19" target="blank"> pune-maharashtra ,
-                    </a>
-            </p>
-            <p> <i class="fa-solid fa-envelope"></i>
-                &nbsp; &nbsp; <a href="mailto:pratikshakatore08@gmail.com">pratikshakatore08@gmail.com</a>
-            </p>
-
-
-            <p> <i class="fa-solid fa-phone"></i>
-                &nbsp; &nbsp; <a href="tel:+91-0000000000"> +91-0000000000</a>
-            </p>
+        <div class="quick-links">
+            <UL type="none">
+                <li>Quick Links</li>
+                <hr>
+                <li>
+                    <ul type="none">
+                        <li><a href="./../index.html">Home</a></li>
+                        <li><a href="./../Pages/about-us.html">About Us</a></li>
+                        <li><a href="./../Pages/contact-page.html">Contact Us</a></li>
+                        <li><a href="./../Pages/services.html">Services</a></li>
+                        <LI><a href="./../Pages/menu-page.html">Menu Card</a></LI>
+                        <li><a href="./../Pages/buy-now.html">buy-now</a></li>
+                    </ul>
+                </li>
+            </UL>
         </div>
+        <div class="quick-links1">
+            <UL type="none">
+                <li>Help & Information</li>
+                <hr>
+                <li>
+                    <ul type="none">
+                        <li><a href="">Privacy Policy</a></li>
+                        <li><a href="">Terms & Conditions</a></li>
+                        <li><a href="">Product Return</a></li>
+                        <li><a href="">Wholesale Policy</a></li>
+                        <li><a href="">Help Center</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="quick-links1">
+            <UL type="none">
+                <li>Contact Us</li>
+                <hr>
+                <li>
+                    <ul type="none">
+                        <li class="slogun1">1/2, Rachik House, <br> Yeolekar, College Road, <br> Nashik, Maharashtra
+                        </li>
+                        <li><a href="">0253 230 5411</a></li>
+                        <li><a href="" target="mailto">creamydesert@gmail.com</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>         
     </div>
-</div>
-
-
-<script src="https://kit.fontawesome.com/4d47a5db67.js" crossorigin="anonymous"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    <hr class="hr">
+    <p id="copyright" style="text-align:center;">Copyright @ Creamy Desert | All Rights Reserved.</p>
+    <img src="./../icons/logoo-removebg-preview.png" class="visa-image" alt="">
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-    <script src="../js/orderNow.js"></script>
-
-
 </body>
 
 </html>
