created-footer-change

--- a/Pages/buy-now.html
+++ b/Pages/buy-now.html
@@ -144,7 +144,7 @@
             <img src="./../imgs/logo.png" alt="" id="footer-logo">
             <h4 class="slogun">
                 "Scoops of joy, frozen delight,<br>
-                Taste the magic, day or night!"</h4>
+                Taste the magic, day or night..!!"</h4>
             <div class="footer mt-4">&nbsp;&nbsp;<a href="https://www.instagram.com/bhushan_potdar_19"
                     onclick="return ready()" class="b" target="_blank"><i
                         class="fa-brands fa-instagram fa-brand"></i></a>&emsp;<a
