--- a/Pages/about-us.html
+++ b/Pages/about-us.html
@@ -164,12 +164,12 @@ We Are An Awesome Agency.
         </div>
 
         <div class="card" style="width: 200px; height: 550px;">
-  <img src="https://source.unsplash.com/collection/190727/1600x900" class="card-img-top p-2" style="height: 300px;"alt="...">
+  <img src="./../imgs/about-page-img/shashikant.jpg" class="card-img-top p-2" style="height: 300px;"alt="...">
   <div class="card-body">
-    <h5 class="card-title color">Card title</h5><hr/>
+    <h5 class="card-title color">Shashikant Surve</h5><hr/>
     <span>Creator</span>
-    <p>• About page <br/> •Login Page <br/> •Registration Page</p>
-    <p class="pragraph-text"> <a href="mailto:janvichincholkar14@gmail.com" class="color"> Send Mail</a>
+    <p>• Home Page</p>
+    <p class="pragraph-text"> <a href="mailto:sdsurve55555@gmail.com" class="color"> Send Mail</a>
   </div>
 </div>
     </div>
@@ -178,22 +178,22 @@ We Are An Awesome Agency.
     <div class="carousel-item">
       <div class="card-wrapper container-sm d-flex  justify-content-around">
       <div class="card " style="width: 200px; height: 550px;">
-  <img src="https://source.unsplash.com/collection/190727/1600x900" class="card-img-top p-2" style="height: 300px;"alt="...">
+  <img src="./../imgs/about-page-img/bhushan.jpg" class="card-img-top p-2" style="height: 300px;"alt="...">
   <div class="card-body">
-    <h5 class="card-title color">Card title</h5><hr/>
+    <h5 class="card-title color">Bhushan Potdar</h5><hr/>
     <span>Creator</span>
-    <p>• About page <br/> •Login Page <br/> •Registration Page</p>
-    <p class="pragraph-text"> <a href="mailto:janvichincholkar14@gmail.com" class="color"> Send Mail</a>
+    <p>• Contact Page</p>
+    <p class="pragraph-text"> <a href="mailto:bhushanpotdar3@gmail.com" class="color"> Send Mail</a>
   </div>
 </div>
 
         <div class="card" style="width: 200px; height: 550px;">
-  <img src="https://source.unsplash.com/collection/190727/1600x900" class="card-img-topp-2" style="height: 300px;" alt="...">
+  <img src="./../imgs/about-page-img/pratiksha-shinde.jpg" class="card-img-topp-2" style="height: 300px;" alt="...">
   <div class="card-body">
-    <h5 class="card-title color">Card title</h5><hr/>
+    <h5 class="card-title color">Pratiksha Shinde</h5><hr/>
     <span>Creator</span>
-    <p>• About page <br/> •Login Page <br/> •Registration Page</p>
-    <p class="pragraph-text"> <a href="mailto:janvichincholkar14@gmail.com" class="color"> Send Mail</a>
+    <p>• Add To Cart Page</p>
+    <p class="pragraph-text"> <a href="mailto:Shindepratikshapratap9.com" class="color"> Send Mail</a>
   </div>
         </div>
 
