--- a/Pages/about-us.html
+++ b/Pages/about-us.html
@@ -198,12 +198,12 @@ We Are An Awesome Agency.
         </div>
 
         <div class="card" style="width: 200px; height: 550px;">
-  <img src="https://source.unsplash.com/collection/190727/1600x900" class="card-img-top p-2" style="height: 300px;"alt="...">
+  <img src="./../imgs/about-page-img/Prajoyt.jpg" class="card-img-top p-2" style="height: 300px;"alt="...">
   <div class="card-body">
-    <h5 class="card-title color">Card title</h5><hr/>
+    <h5 class="card-title color">Prajot Pathade</h5><hr/>
     <span>Creator</span>
-    <p>• About page <br/> •Login Page <br/> •Registration Page</p>
-    <p class="pragraph-text"> <a href="mailto:janvichincholkar14@gmail.com" class="color"> Send Mail</a>
+    <p>• Service Page</p>
+    <p class="pragraph-text"> <a href="mailto:prajyotpathade5015@gmail.com" class="color"> Send Mail</a>
   </div>
 </div>
     </div>
