--- a/index.html
+++ b/index.html
@@ -14,20 +14,18 @@
     <script src="./JS/header.js"></script>
     <script src="./JS/index.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="nav-container flex" id="nav">
-        <div class="right-flex flex">
-            <img src="./imgs/menu.png" height="40px" class="hamburger" onclick="openNav()" alt="">
-            <a href="./index.html"> <img src="./imgs/logo.png" class="logo" alt=""></a>
+    <div class="nav-container-main1 flex-display" >
+        <div class="right-flex flex-display">
+            <img src="./imgs/menu.png" height="40px" class="hamburger-img-nav" onclick="openNav()" alt="">
+            <a href="./index.html"> <img src="./imgs/logo.png" class="navigationbar-logo" alt=""></a>
         </div>
         <div class="mid-flex">
-            <ul class="menu-list flex" type="none">
+            <ul class="menu-list flex-display" type="none">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="./Pages/about-us.html">About Us</a></li>
                 <li><a href="./Pages/contact-page.html">Contact Us</a></li>
@@ -89,7 +87,6 @@
 
     </header>
     <!-- ----------------------Nav-Bar-End-------------------------------- -->
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <div class="visit">
         <span class="headings">VISIT OUR STORE</span><br>
         <span class="color">__________</span>
@@ -97,7 +94,7 @@
         <div class="visit-images-containere">
             <div id="carouselExample" class="carousel slide margin-left">
                 <div class="carousel-inner">
-                    <div class="carousel-item active flex">
+                    <div class="carousel-item active flex-display">
                         <a href="./Pages/menu-page.html"><img src="./imgs/ba20.webp" class="visit-img" alt=""></a>
                         <a href="./Pages/menu-page.html"><img src="./imgs/ba21.webp" class="visit-img visit-img1 "
                                 alt=""></a>
@@ -106,7 +103,7 @@
                         <a href="./Pages/menu-page.html"><img src="./imgs/ba19.webp" class="visit-img visit-img3"
                                 alt=""></a>
                     </div>
-                    <div class="carousel-item active flex">
+                    <div class="carousel-item active flex-display">
                         <a href="./Pages/menu-page.html"><img src="./imgs/home/ba23.jpg" class="visit-img" alt=""></a>
                         <a href="./Pages/menu-page.html"><img src="./imgs/ba20.webp" class="visit-img visit-img1"
                                 alt=""></a>
@@ -115,7 +112,7 @@
                         <a href="./Pages/menu-page.html"><img src="./imgs/ba22.webp" class="visit-img visit-img3"
                                 alt=""></a>
                     </div>
-                    <div class="carousel-item active flex">
+                    <div class="carousel-item active flex-display">
                         <a href="./Pages/menu-page.html"><img src="./imgs/ba22.webp" class="visit-img visit-img"
                                 alt=""></a>
                         <a href="./Pages/menu-page.html"><img src="./imgs/home/ba23.jpg" class="visit-img visit-img1"
@@ -284,7 +281,7 @@
     </div>
     <!-- image zoom hover -->
     <div class="margin-top margin-bottom">
-        <div class="flex img-cont">
+        <div class="flex-display img-cont">
             <div class="img-size">
                 <img src="./imgs/ba16.webp" class="img-size1 img-fluid float-start" alt="">
             </div>
@@ -300,7 +297,7 @@
             </div>
         </div>
         <!--  -->
-        <div class="flex ">
+        <div class="flex-display ">
             <div class="white-bg" style="margin: auto;">
                 <h2>Ice Cream Cone</h2>
                 <h5 style="margin-left: 10%;">Save up to 40% off</h5>
@@ -321,7 +318,7 @@
         </div>
     </div>
     <!-- end hover -->
-    <div class="about-section flex">
+    <div class="about-section flex-display">
         <div class="about-section-dis">
             <p class="mb-4 description">OUR ABOUT US</p>
             <h3 class="mb-4">Ice Cream Drinks</h3>
@@ -433,7 +430,7 @@
             <h1>Take The Experience Of Our Delightful</h1>
             <h1>Ice Cream Menu</h1>
         </div>
-        <div class="flex menu-product">
+        <div class="flex-display menu-product">
             <div class=" menu-card-icons">
                 <div class="card-img">
                     <img src="./icons/cone.png" width="120px" class="img-fluid" alt="">
@@ -473,7 +470,7 @@
         @creamy_desert (ice-cream) <br>
         <p class="color2">_________</p>
         <div class="single-image-container"></div>
-        <div class="flex  image-content">
+        <div class="flex-display  image-content">
             <div class="insta-img-div">
                 <img src="./imgs/home/instagram2.webp" height="300px" class="insta-image" alt="">
                 <div class="middle-insta">
@@ -495,7 +492,7 @@
         </div>
     </div>
     <footer>
-        <div class="flex footer-cont">
+        <div class="flex-display footer-cont">
             <div>
                 <img src="./imgs/logo1.png" alt="" id="footer-logo">
                 <h4 class="slogun">
