--- a/Pages/about-us.html
+++ b/Pages/about-us.html
@@ -37,6 +37,22 @@ We Are An Awesome Agency.
             <a href="" class="color" > EXPLORE MORE </a>
         </div>
 
+        <div  class="mt-5">
+          <div  style="margin-bottom: 5%;"> <h1 class="heading-font m-3 bolder fw-bolder text-center ">Our Speical Deserts</h1></div>
+          <div class="d-flex ">
+            <div class="pragraph-text"> 
+              <button onclick="icecream1()" class="d-block btn btn-lg pragraph-text register-btn m-3">Chocolate Reflections </button>
+              <button onclick="icecream2()" class="d-block btn btn-lg  pragraph-text register-btn m-3"> Cocoa Crystal Creations </button>
+              <button onclick="icecream5()" class="d-block btn btn-lg pragraph-text register-btn m-3"> Velvet Glass Chocolate</button>
+              <button onclick="icecream4()" class="d-block btn btn-lg pragraph-text register-btn m-3">Dark Berry Fusion</button>
+              <button onclick="icecream5()" class="d-block btn btn-lg pragraph-text register-btn m-3">Mango Sorbet </button>
+          </div>
+          <div >
+            <img src="./img/11.png" class="icecream"  id="icecream" />
+          </div>
+          </div>
+          </div>
+
         <div class="mt-4 col-sm-12">
             <video controls class="video p-3 m-5"> <source src="/video/about-page/icecream-video.mp4" type="video/mp4" />
             </video>
