--- a/Pages/buy-now.html
+++ b/Pages/buy-now.html
@@ -13,7 +13,6 @@
 
 <body>
 
-
   <div class="mb-5">
     <div class="container">
       <div class="row d-flex my-5 ms-md-5">
@@ -136,15 +135,13 @@
     </div>
   </div>
 
-
-
   <footer>
     <div class="flex footer-cont">
         <div>
-            <img src="./../imgs/logo.png" alt="" id="footer-logo">
+            <img src="./../imgs/logo1.png" alt="" id="footer-logo">
             <h4 class="slogun">
                 "Scoops of joy, frozen delight,<br>
-                Taste the magic, day or night..!!"</h4>
+                Taste the magic, day or night!"</h4>
             <div class="footer mt-4">&nbsp;&nbsp;<a href="https://www.instagram.com/bhushan_potdar_19"
                     onclick="return ready()" class="b" target="_blank"><i
                         class="fa-brands fa-instagram fa-brand"></i></a>&emsp;<a
@@ -170,7 +167,6 @@
                         <li><a href="./../Pages/contact-page.html">Contact Us</a></li>
                         <li><a href="./../Pages/services.html">Services</a></li>
                         <LI><a href="./../Pages/menu-page.html">Menu Card</a></LI>
-                        <li><a href="./../Pages/buy-now.html">buy-now</a></li>
                     </ul>
                 </li>
             </UL>
@@ -203,7 +199,7 @@
                     </ul>
                 </li>
             </ul>
-        </div>         
+        </div>
     </div>
     <hr class="hr">
     <p id="copyright" style="text-align:center;">Copyright @ Creamy Desert | All Rights Reserved.</p>
@@ -212,6 +208,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-</body>
 
-</html>
+  </body>
+  </html>
+
+
+  
