--- a/Pages/product-card.html
+++ b/Pages/product-card.html
@@ -10,12 +10,40 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="./../css/product-card.css">
+        <link rel="stylesheet" href="./../css/header.css">
+        <script src="./../JS/header.js"></script>
+        <script src="./../JS/index.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <script src="https://kit.fontawesome.com/029a190c6b.js" crossorigin="anonymous"></script>
        
     </head>
     <body>
+        <!--header-->
+        <div class="nav-container flex" id="nav">
+            <div class="right-flex flex">
+                <img src="./../imgs/menu.png" height="40px" class="hamburger" onclick="openNavs()" alt="">
+                <a href="./../index.html"> <img src="./../imgs/logo.png" class="logo" alt=""></a>
+            </div>
+            <div class="mid-flex">
+                <ul class="menu-list flex" type="none">
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="./../Pages/about-us.html">About Us</a></li>
+                    <li><a href="./../Pages/contact-page.html">Contact Us</a></li>
+                    <li><a href="./../Pages/services.html">Services</a></li>
+                </ul>
+            </div>
+            <div class="left-flex">
+                <img src="./../icons/magnifying-glass.png" class="nav-icons" alt="" onclick="openSearch()">
+                <a href="./../Pages/login-page.html"><img src="./../icons/add-contact.png" class="nav-icons login-icon"
+                        alt=""></a>
+                <img src="./../icons/heart.png" class="nav-icons  heart-icon" alt="">
+                <a href="./../Pages/add-to-cart.html"><img src="./../icons/shopping-bag.png" class="nav-icons" alt=""
+                        onclick="openCarts()"></a>
+            </div>
+        </div>
+      
+        <!--header ends-->
      <div class="main-img img-fluid" alt="first-img" style="background-image:url('./../imgs/product-card/pro-main-img.jpg');background-repeat:no-repeat;background-size:cover;";>
         <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
         <p class="text-start text-white fs-1 m-5">Enjoy our Creamy <br/>and <br/>tasty products</p><br/><br/><br/><br/><br/><br/><br/><br/>
