--- a/Pages/buy-now.html
+++ b/Pages/buy-now.html
@@ -166,7 +166,8 @@
                         <li><a href="./../Pages/about-us.html">About Us</a></li>
                         <li><a href="./../Pages/contact-page.html">Contact Us</a></li>
                         <li><a href="./../Pages/services.html">Services</a></li>
-                        <LI><a href="./../Pages/menu-page.html">Menu Card</a></LI>
+                        <li><a href="./../Pages/menu-page.html">Menu Card</a></li>
+                        <li><a href="./../Pages/buy-now.html">buy-now</a></li>
                     </ul>
                 </li>
             </UL>
