--- a/Pages/buy-now.html
+++ b/Pages/buy-now.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="row d-flex my-5 ms-md-5">
         <div class="col-md-7 col-xs-12 bg-white border m-2 p-5 shadow">
-          <h3 class="identity">Shipping Information</h3>
+          <h3 class="identity">Shipping Information 🚗</h3>
           <p class="my-2 mt-5">Full Name :</p>
           <input type="text" placeholder="Your first and last name" required
             class="w-100 p-2 px-3 rounded border border-black">
@@ -111,7 +111,7 @@
             <div class="card-body">
               <h5 class="card-title ">Delicious Mango-Ice-Cream</h5>
               <p class="card-text ">Chill with Cremy!</p>
-              <p><span class="me-5">50% OFF </span><span class="ms-5 ha"> &nbsp; Rs. 699/-</span></p>
+              <p><span class="me-5">50% OFF </span><span class="ms-5 ha"> &nbsp; Rs. 399/-</span></p>
               <div class="d-flex justify-content-around">
                 <a href="#" onclick="addItem('../../img/buy-mow-page-img/Mangoo.png','Delicious Mango-Ice-Cream','699'),alert('Your Order Add Successfully 🎊🎉')">Add to Card</a>
               </div>
