--- a/Pages/about-us.html
+++ b/Pages/about-us.html
@@ -38,7 +38,7 @@ We Are An Awesome Agency.
         </div>
 
         <div  class="mt-5">
-          <div  style="margin-bottom: 5%;"> <h1 class="heading-font m-3 bolder fw-bolder text-center ">Our Speical Deserts</h1></div>
+          <div  style="margin-bottom: 5%;"> <h1 class="heading-font m-3 bolder fw-bolder text-center "> <img src="./../icons/about-us/icecream-icon.png"  style="height: 80px;"/> Speical Deserts</h1></div>
           <div class="d-flex ">
             <div class="pragraph-text"> 
               <button onclick="icecream1()" class="d-block btn btn-lg pragraph-text register-btn m-3">Chocolate Reflections </button>
@@ -236,7 +236,7 @@ We Are An Awesome Agency.
   </button>
        </div>
         </div>  
-/>        </div>
+      </div>
 
 
         <script>
