--- a/Pages/about-us.html
+++ b/Pages/about-us.html
@@ -81,6 +81,12 @@
 
 
 
+  <div class="text-center"> 
+    <img src="./../imgs/about-page-img/ice-cream1.jpg" class="slide-img"/>
+    <img src="./../imgs/about-page-img/ice-cream2.webp" class="slide-img" />
+    <img src="./../imgs/about-page-img/ice-cream3.jpg" class="slide-img" />
+    <img src="./../imgs/about-page-img/ice-cream4.jpg" class="slide-img"/>
+  </div>
 
     
     <div class="m-5 p-5">
