--- a/Pages/add-to-cart.html
+++ b/Pages/add-to-cart.html
@@ -9,6 +9,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="./../css/add-to-cart.css">
+    <link rel="stylesheet" href="./../css/header.css">
     
     
 </head>
