img slide added

--- a/Pages/about-us.html
+++ b/Pages/about-us.html
@@ -81,7 +81,7 @@
 
 
 
-  <div class="text-center"> 
+  <div class="text-center mt-5 pt-3"> 
     <img src="./../imgs/about-page-img/ice-cream1.jpg" class="slide-img"/>
     <img src="./../imgs/about-page-img/ice-cream2.webp" class="slide-img" />
     <img src="./../imgs/about-page-img/ice-cream3.jpg" class="slide-img" />
