hyper link i added to the place order button.

--- a/Pages/add-to-cart.html
+++ b/Pages/add-to-cart.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="btn-div">
                     <a href="./product-card.html" target="blank"><button type="button" class="btn">Continue Shopping</button></a>
-                    <button type="button" class="btn m">Place Order</button>
+                    <a href="./product-card.html" target="blank"><button type="button" class="btn m">Place Order</button></a>
                 </div>
             </div>
         </div>
